@@ -74,6 +74,15 @@ static ULONG unicodeCanonical(texttype* tt, ULONG srcLen, const UCHAR* src,
 	ULONG dstLen, UCHAR* dst);
 
 
+GlobalPtr<IntlUtil::Utf8CharSet> IntlUtil::utf8CharSet;
+
+IntlUtil::Utf8CharSet::Utf8CharSet(MemoryPool& pool)
+{
+	IntlUtil::initUtf8Charset(&obj);
+	charSet = Jrd::CharSet::createInstance(pool, CS_UTF8, &obj);
+}
+
+
 string IntlUtil::generateSpecificAttributes(Jrd::CharSet* cs, SpecificAttributesMap& map)
 {
 	SpecificAttributesMap::Accessor accessor(&map);
@@ -554,6 +563,19 @@ ULONG IntlUtil::toUpper(Jrd::CharSet* cs, ULONG srcLen, const UCHAR* src, ULONG 
 
 	// convert to original character set
 	return cs->getConvFromUnicode().convert(srcLen, upper_str.begin(), dstLen, dst);
+}
+
+
+void IntlUtil::toUpper(Jrd::CharSet* cs, string& s)
+{
+	HalfStaticArray<UCHAR, BUFFER_SMALL> buffer;
+	size_t len = s.length();
+	ULONG count = toUpper(cs, len, (const UCHAR*) s.c_str(), len * 4, buffer.getBuffer(len * 4), NULL);
+
+	if (count != INTL_BAD_STR_LENGTH)
+		s.assign((const char*) buffer.begin(), count);
+	else
+		fb_assert(false);
 }
 
 
